<resources>
    <string name="app_name">Shoebox</string>
    <string name="action_settings">Settings</string>
    <string name="getting_started">Getting Started</string>
    <string name="gauge_fraction_divider">/</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="dashboard">Dashboard</string>
    <string name="trends">Trends</string>
    <string name="within_budget">Congratulations! You\'re within your budget.</string>
    <string name="exceeded_budget">You\'ve exceeded your budget for this month.</string>
    <string name="zero_dollars">0.00</string>
    <string name="currency_symbol">$</string>
    <string name="next">Next</string>
    <string name="per_month">/ month</string>
    <string name="monthly_budget_question">What is your total monthly budget?</string>
    <string name="budget_validation">Budget must be greater than 0</string>
    <string name="new_transaction">New Transaction</string>
    <string name="title">Title</string>
    <string name="no_title">No title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="add_transaction">Add New Transaction</string>
    <string name="cancel">Cancel</string>
    <string name="misc">Misc</string>
    <string name="settings">Settings</string>
    <string name="budget_for_interval">Budget for this month</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="no_transactions_found">No transactions found</string>
    <string name="view_more_transactions">View more transactions</string>
    <plurals name="delete_n_transactions">
        <item quantity="other">Delete %d</item>
    </plurals>
    <string name="apply_filters">Apply filters</string>
    <string name="no_category_filter">No category filter</string>
    <string name="no_start_date">No start date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_end_date">No end date</string>
    <string name="reset_filters">Reset filters</string>
    <string name="search_and_filters">Search and filters</string>
    <string name="no_max_amount">%s+</string>
    <string name="budget_schedule">Budget Schedule</string>
    <string name="year">Year</string>
    <string name="ok">OK</string>
    <string name="no_budget">No Budget</string>
    <string name="this_month">This month</string>
    <string name="budget">Budget</string>
    <string name="repeat">Repeat</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="n_over_budget">%s over budget</string>
    <string name="n_budget_remaining">%s remaining</string>
    <string name="from_date_range">From %s - %s</string>
    <plurals name="applied_filters">
        <item quantity="one">%d filter applied</item>
        <item quantity="other">%d filters applied</item>
    </plurals>
</resources>
