<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    app:layout_constraintWidth_percent="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/new_transaction"
            android:textColor="#707070"
            android:textSize="30sp"
            app:fontFamily="@font/staatliches_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/title"
            android:textColor="#A3A3A3"
            android:textSize="14sp"
            app:fontFamily="@font/staatliches_font_family" />

        <EditText
            android:id="@+id/new_transaction_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:hint="@string/no_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/amount"
                    android:textColor="#A3A3A3"
                    android:textSize="14sp"
                    app:fontFamily="@font/staatliches_font_family" />

                <com.msindwan.shoebox.widgets.CurrencyInput
                    android:id="@+id/new_transaction_txt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/date"
                    android:textColor="#A3A3A3"
                    android:textSize="14sp"
                    app:fontFamily="@font/staatliches_font_family" />


                <com.msindwan.shoebox.widgets.DateInput
                    android:id="@+id/new_transaction_txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:padding="5dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/category"
            android:textColor="#A3A3A3"
            android:textSize="14sp"
            app:fontFamily="@font/staatliches_font_family" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/new_transaction_txt_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_background"
            android:hint="@string/misc"
            android:padding="8dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <Button
            android:id="@+id/new_transaction_btn_add_transaction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/add_transaction"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:fontFamily="@font/staatliches_regular" />

        <Button
            android:id="@+id/new_transaction_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:fontFamily="@font/staatliches_regular" />

    </LinearLayout>

</ScrollView>