<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    app:layout_constraintWidth_percent="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/setup_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/getting_started"
            android:textColor="#707070"
            android:textSize="30sp"
            app:fontFamily="@font/staatliches_font_family" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="15dp"
            android:text="@string/monthly_budget_question"
            android:textColor="#707070"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <com.msindwan.shoebox.widgets.CurrencyInput
                android:id="@+id/setup_txt_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/per_month"
                android:textColor="#707070"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/setup_btn_next"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:fontFamily="@font/staatliches_font_family" />

    </LinearLayout>

</ScrollView>