<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/dashboard_transaction_filters_btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F87A9"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_filters"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:fontFamily="@font/staatliches_font_family">

        </TextView>

        <TextView
            android:id="@+id/dashboard_transactions_filters_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="12sp">

        </TextView>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/title"
                android:textColor="#A3A3A3"
                android:textSize="16sp"
                app:fontFamily="@font/staatliches_font_family" />

            <EditText
                android:id="@+id/dashboard_transactions_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_background"
                android:hint="@string/no_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/amount"
                android:textColor="#A3A3A3"
                android:textSize="16sp"
                app:fontFamily="@font/staatliches_font_family" />

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/dashboard_transactions_amount_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_color="#F9F9F9"
                app:bar_highlight_color="#56B2DC"
                app:corner_radius="1"
                app:data_type="_integer"
                app:left_thumb_color="#56B2DC"
                app:left_thumb_color_pressed="#56B2DC"
                app:right_thumb_color="#56B2DC"
                app:right_thumb_color_pressed="#56B2DC"
                app:steps="100" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dashboard_transactions_amount_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                </TextView>

                <TextView
                    android:id="@+id/dashboard_transactions_amount_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/from"
                        android:textColor="#A3A3A3"
                        android:textSize="16sp"
                        app:fontFamily="@font/staatliches_font_family" />

                    <com.msindwan.shoebox.widgets.DateInput
                        android:id="@+id/dashboard_transactions_txt_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_background"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/dashboard_transactions_filter_no_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/no_start_date"
                        android:textColor="#3F87A9"
                        android:textSize="12sp">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/to"
                        android:textColor="#A3A3A3"
                        android:textSize="16sp"
                        app:fontFamily="@font/staatliches_font_family" />

                    <com.msindwan.shoebox.widgets.DateInput
                        android:id="@+id/dashboard_transactions_txt_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_background"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/dashboard_transactions_filter_no_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/no_end_date"
                        android:textColor="#3F87A9"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/category"
                android:textColor="#A3A3A3"
                android:textSize="16sp"
                app:fontFamily="@font/staatliches_font_family" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dashboard_transactions_txt_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_background"
                android:hint="@string/no_category_filter"
                android:padding="8dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/dashboard_transactions_btn_apply_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/apply_filters"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:fontFamily="@font/staatliches_regular" />

        </LinearLayout>

    </ScrollView>
</merge>