<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp">

        <com.msindwan.shoebox.widgets.NumberSelector
            android:id="@+id/budget_schedule_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_expand_more_24px"
            android:drawableLeft="@drawable/ic_expand_more_24px"
            android:padding="10dp"
            android:textSize="16sp"
            app:fontFamily="@font/staatliches_font_family" />

        <TextView
            android:id="@+id/budget_schedule_current_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_calendar"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/this_month"
            android:textSize="16sp"
            app:fontFamily="@font/staatliches_font_family" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/budget_schedule_calendar_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DADADA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingBottom="10dp"
                    android:text="@string/budget"
                    android:textColor="#A3A3A3"
                    android:textSize="16sp"
                    app:fontFamily="@font/staatliches_font_family" />

                <com.msindwan.shoebox.widgets.CurrencyInput
                    android:id="@+id/budget_schedule_edit_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:text="@string/repeat"
                    android:textColor="#A3A3A3"
                    android:textSize="16sp"
                    app:fontFamily="@font/staatliches_font_family"
                    tools:ignore="RtlSymmetry" />

                <Spinner
                    android:id="@+id/budget_schedule_repeat_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/budget_schedule_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:fontFamily="@font/staatliches_regular" />

    </LinearLayout>

</LinearLayout>